feat: update activity api
